
* Removed irrelevant harp_str64() and harp_str64u() functions (HARP does not
  support 64bit integers).

* Fixed issue where molar mass linked to variables with a 'surface',
  'tropospheric', or 'stratospheric' prefix returned 0.

* Fixed error/crash in deriving dry air column vmr from dry air column mmr.

* Updates to product ingestions:
  - GOME-2 L2: add support for SO2 columns at all plume heights

1.10 2020-03-31
~~~~~~~~~~~~~~~

* Added support for -ar/--reduce-operations parameter in harpmerge and
  for reduce_operations parameter in harp.import_product() Python function.

* Fixed incorrect "invalid variable" error on weight variables for angular
  quantities when performing a harpmerge.

* Fixed issue where the udunits2 library could not be initialized if the
  environment had a LC_NUMERIC locale that did not have '.' as decimal
  separator.

* Fixed issue in name mangling of embedded expat library.

* Updates to product ingestions:
  - GOMOS L1 Limb: fixed unit of wavelength_photon_radiance (and uncertainty)
    and documented conversion algorithm
  - S5P L2 O3 PR: support for IODD 12.0.0
  - S5P L2 O3 TPR: removed support (future availability of product uncertain)
  - GEOMS PANDORA: allow for trailing \0 in global attribute values

1.9.2 2019-12-01
~~~~~~~~~~~~~~~~

* Fixed issue where using the 'bin()' operation did not correctly create a
  '<variable>_weight' variable from a 'weight' variable when it was missing.

* Added default units to documention on variable name conventions.

* Updates to product ingestions:
  - Calipso L2: fixed unit of backscatter coefficient
  - ERS GOME L2: fixed unit of cloud top height
  - S5P L2 AER_LH: fixed unit of aerosol optical depth
  - S5P L2 SO2: add scaled avk for 1km/7km/15km box profiles

1.9.1 2019-11-01
~~~~~~~~~~~~~~~~

* Fixed issue where results from deriving partial column densities from vmr and
  pressure were a factor 10 too low.

* Fixed issue where operation following an index filter operation did not