@@ -18,7 +18,8 @@
 * Fixed error/crash in deriving dry air column vmr from dry air column mmr.
 
 * Updates to product ingestions:
-  - GOME-2 L2: add support for SO2 columns at all plume heights
+  - GOME-2 L2: added support for SO2 columns at all plume heights
+  - OMI L2 CLDO2/CLDRR: added validity variable
 
 1.10 2020-03-31
 ~~~~~~~~~~~~~~~
